добавляет часть иконок

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,19 +19,19 @@
     <header class="top-line">
       <div class="container mein-line">
         <nav class="nav-sector">
-          <a class="logo-link" href="./index.html"><span class="logo">Web</span>Studio</a>
+          <a class="link logo-link" href="./index.html"><span class="logo">Web</span>Studio</a>
           <ul class="site-nav list">
-            <li class="item"><a class="connect current" href="./index.html">Студія</a></li>
-            <li class="item"><a class="connect" href="./portfolio.html">Портфоліо</a></li>
-            <li class="item"><a class="connect" href="#">Контакти</a></li>
+            <li class="item"><a class="link connect current" href="./index.html">Студія</a></li>
+            <li class="item"><a class="link connect" href="./portfolio.html">Портфоліо</a></li>
+            <li class="item"><a class="link connect" href="#">Контакти</a></li>
           </ul>
         </nav>
         <ul class="contact list">
           <li class="item">
-            <a class="connect" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link connect" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="item">
-            <a class="connect" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link connect" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -155,7 +155,7 @@
     </main>
     <footer class="page-footer">
       <div class="container">
-        <a class="logo-link logo-footer" href="./index.html"><span class="logo">Web</span>Studio</a>
+        <a class="link logo-link logo-footer" href="./index.html"><span class="logo">Web</span>Studio</a>
         <address>
           <ul class="list">
             <li class="list-item">
@@ -168,12 +168,12 @@
               >
             </li>
             <li class="list-item">
-              <a class="connect contact-address" href="mailto:info@devstudio.com"
+              <a class="link connect contact-address" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
             <li class="list-item">
-              <a class="connect contact-address" href="tel:+380961111111">+38 096 111 11 11</a>
+              <a class="link connect contact-address" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
         </address>
