тени на карточки

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Студія</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet" />
   <link rel="stylesheet"
@@ -45,7 +46,7 @@
     <section class="hero">
       <div class="container">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="button-hero" type="button">Замовити послугу</button>
+        <button class="button button-hero" type="button">Замовити послугу</button>
       </div>
     </section>
     <section class="section">
@@ -337,7 +338,7 @@
         </address>
       </div>
       <div class="social-bloc">
-        <p><strong>приєднуйтесь</strong></p>
+        <p class="welcome-text"><strong>приєднуйтесь</strong></p>
         <ul class="list social-links">
           <li class="item">
             <a class="link social-link welcome-link" href="#" aria-label="instagram">
