--- a/portfolio.html
+++ b/portfolio.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+    <!-- шрифти -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet">
+      <!-- нормалізатор -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
     />
+    <!-- стилі -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -84,7 +86,7 @@
                 height="294"
               />
               <div class="text-content">
-                <h3 class="box-subtitle">Постер New Orlean vs Golden Star</h3>
+                <h3 class="box-subtitle">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                 <p class="desc">Дизайн</p>
               </div>
             </li>
@@ -96,21 +98,21 @@
                 height="294"
               />
               <div class="text-content">
-                <h3 class="box-subtitle">Ресторан Seafood</h3>
+                <h3 class="box-subtitle">Ресторан <span lang="en">Seafood</span></h3>
                 <p class="desc">Додаток</p>
               </div>
             </li>
             <li class="portfolio-box">
               <img class="image" src="./images/portfolio/img-11.jpg" alt="Навушники" width="370" height="294" />
               <div class="text-content">
-                <h3 class="box-subtitle">Проєкт Prime</h3>
+                <h3 class="box-subtitle">Проєкт <span lang="en">Prime</span></h3>
                 <p class="desc">Маркетинг</p>
               </div>
             </li>
             <li class="portfolio-box">
               <img class="image" src="./images/portfolio/img-12.jpg" alt="дві коробки" width="370" height="294" />
               <div class="text-content">
-                <h3 class="box-subtitle">Проєкт Boxes</h3>
+                <h3 class="box-subtitle">Проєкт <span lang="en">Boxes</span></h3>
                 <p class="desc">Додаток</p>
               </div>
             </li>
@@ -134,14 +136,14 @@
                 height="294"
               />
               <div class="text-content">
-                <h3 class="box-subtitle">Видання Limited Edition</h3>
+                <h3 class="box-subtitle">Видання <span lang="en">Limited Edition</span></h3>
                 <p class="desc">Дизайн</p>
               </div>
             </li>
             <li class="portfolio-box">
               <img class="image" src="./images/portfolio/img-15.jpg" alt="Лейбл магазину" width="370" height="294" />
               <div class="text-content">
-                <h3 class="box-subtitle">Проєкт LAB</h3>
+                <h3 class="box-subtitle">Проєкт <span lang="en">LAB</span></h3>
                 <p class="desc">Маркетинг</p>
               </div>
             </li>
