--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <li class="work-foto">
               <img
                 class="image"
-                src="./images/studio/img-1.jpg"
+                src="./images/studio/img-1.jpeg"
                 alt="Програмист пряцює за столом. Нtml код."
                 width="370"
                 height="294"
@@ -127,7 +127,7 @@
             <li class="work-foto">
               <img
                 class="image"
-                src="./images/studio/img-2.jpg"
+                src="./images/studio/img-2.jpeg"
                 alt="Дизайнер розробляе мобільні додатки. Інтерфейс для смартфона."
                 width="370"
                 height="294"
@@ -136,7 +136,7 @@
             <li class="work-foto">
               <img
                 class="image"
-                src="./images/studio/img-3.jpg"
+                src="./images/studio/img-3.jpeg"
                 alt="Художник вебдизайнер вибирає кольор на графичному планшеті."
                 width="370"
                 height="294"
@@ -152,7 +152,7 @@
             <li class="team-list">
               <img
                 class="image member"
-                src="./images/studio/img-4.jpg"
+                src="./images/studio/img-4.jpeg"
                 alt="Ігор Дем'яненко"
                 width="270"
                 height="260"
@@ -193,7 +193,7 @@
             <li class="team-list">
               <img
                 class="image member"
-                src="./images/studio/img-5.jpg"
+                src="./images/studio/img-5.jpeg"
                 alt="Ольга Рєпіна"
                 width="270"
                 height="260"
@@ -234,7 +234,7 @@
             <li class="team-list">
               <img
                 class="image member"
-                src="./images/studio/img-6.jpg"
+                src="./images/studio/img-6.jpeg"
                 alt="Микола Тарасов"
                 width="270"
                 height="260"
@@ -275,7 +275,7 @@
             <li class="team-list">
               <img
                 class="image member"
-                src="./images/studio/img-7.jpg"
+                src="./images/studio/img-7.jpeg"
                 alt="Михайло Єрмаков"
                 width="270"
                 height="260"
