--- a/portfolio.html
+++ b/portfolio.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфоліо</title>
     <!-- шрифти -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet">
-      <!-- нормалізатор -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- нормалізатор -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -25,24 +27,27 @@
           <a class="link logo-link" href="./index.html"><span class="logo">Web</span>Studio</a>
           <ul class="site-nav list">
             <li class="item"><a class="link connect" href="./index.html">Студія</a></li>
-            <li class="item"><a class="link connect current" href="./portfolio.html">Портфоліо</a></li>
+            <li class="item">
+              <a class="link connect current" href="./portfolio.html">Портфоліо</a>
+            </li>
             <li class="item"><a class="link connect" href="#">Контакти</a></li>
           </ul>
         </nav>
         <ul class="contact list">
-        <li class="item">
-          <a class="link connect" href="mailto:info@devstudio.com">
-            <svg class="icon" width="16" height="12">
-              <use href="./images/icons/sprite.svg#envelope"></use>
-            </svg>info@devstudio.com
-          </a>
-        </li>
-        <li class="item">
-          <a class="link connect" href="tel:+380961111111">
-            <svg class="icon" width="10" height="16">
-              <use href="./images/icons/sprite.svg#phone"></use>
-            </svg>+38 096 111 11 11</a>
-        </li>
+          <li class="item">
+            <a class="link connect" href="mailto:info@devstudio.com">
+              <svg class="icon" width="16" height="12">
+                <use href="./images/icons/sprite.svg#envelope"></use></svg
+              >info@devstudio.com
+            </a>
+          </li>
+          <li class="item">
+            <a class="link connect" href="tel:+380961111111">
+              <svg class="icon" width="10" height="16">
+                <use href="./images/icons/sprite.svg#phone"></use></svg
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </div>
     </header>
@@ -59,16 +64,21 @@
             <li class="list-btn">
               <button class="button button-filter" type="button">Веб-сайти</button>
             </li>
-            <li class="list-btn"><button class="button button-filter" type="button">Додатки</button></li>
-            <li class="list-btn"><button class="button button-filter" type="button">Дизайн</button></li>
+            <li class="list-btn">
+              <button class="button button-filter" type="button">Додатки</button>
+            </li>
+            <li class="list-btn">
+              <button class="button button-filter" type="button">Дизайн</button>
+            </li>
             <li class="list-btn">
               <button class="button button-filter" type="button">Маркетинг</button>
             </li>
           </ul>
           <ul class="list portfolio">
             <li class="portfolio-box">
-              <img class="image"
-                src="./images/portfolio/img-8.jpg"
+              <img
+                class="image"
+                src="./images/portfolio/img-8.jpeg"
                 alt="відкрита веб-сторінка на ноутбуці"
                 width="370"
                 height="294"
@@ -79,20 +89,24 @@
               </div>
             </li>
             <li class="portfolio-box">
-              <img class="image"
-                src="./images/portfolio/img-9.jpg"
+              <img
+                class="image"
+                src="./images/portfolio/img-9.jpeg"
                 alt="Два гравця баскетболу у грі"
                 width="370"
                 height="294"
               />
               <div class="text-content">
-                <h3 class="box-subtitle">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                <h3 class="box-subtitle">
+                  Постер <span lang="en">New Orlean vs Golden Star</span>
+                </h3>
                 <p class="desc">Дизайн</p>
               </div>
             </li>
             <li class="portfolio-box">
-              <img class="image"
-                src="./images/portfolio/img-10.jpg"
+              <img
+                class="image"
+                src="./images/portfolio/img-10.jpeg"
                 alt="логотип ресторану морська їжа з малюнком риби"
                 width="370"
                 height="294"
@@ -103,22 +117,35 @@
               </div>
             </li>
             <li class="portfolio-box">
-              <img class="image" src="./images/portfolio/img-11.jpg" alt="Навушники" width="370" height="294" />
+              <img
+                class="image"
+                src="./images/portfolio/img-11.jpeg"
+                alt="Навушники"
+                width="370"
+                height="294"
+              />
               <div class="text-content">
                 <h3 class="box-subtitle">Проєкт <span lang="en">Prime</span></h3>
                 <p class="desc">Маркетинг</p>
               </div>
             </li>
             <li class="portfolio-box">
-              <img class="image" src="./images/portfolio/img-12.jpg" alt="дві коробки" width="370" height="294" />
+              <img
+                class="image"
+                src="./images/portfolio/img-12.jpeg"
+                alt="дві коробки"
+                width="370"
+                height="294"
+              />
               <div class="text-content">
                 <h3 class="box-subtitle">Проєкт <span lang="en">Boxes</span></h3>
                 <p class="desc">Додаток</p>
               </div>
             </li>
             <li class="portfolio-box">
-              <img class="image"
-                src="./images/portfolio/img-13.jpg"
+              <img
+                class="image"
+                src="./images/portfolio/img-13.jpeg"
                 alt="сторінка веб-сайту на моніторі"
                 width="370"
                 height="294"
@@ -129,8 +156,9 @@
               </div>
             </li>
             <li class="portfolio-box">
-              <img class="image"
-                src="./images/portfolio/img-14.jpg"
+              <img
+                class="image"
+                src="./images/portfolio/img-14.jpeg"
                 alt="книга, лимітоване видавництво"
                 width="370"
                 height="294"
@@ -141,15 +169,22 @@
               </div>
             </li>
             <li class="portfolio-box">
-              <img class="image" src="./images/portfolio/img-15.jpg" alt="Лейбл магазину" width="370" height="294" />
+              <img
+                class="image"
+                src="./images/portfolio/img-15.jpeg"
+                alt="Лейбл магазину"
+                width="370"
+                height="294"
+              />
               <div class="text-content">
                 <h3 class="box-subtitle">Проєкт <span lang="en">LAB</span></h3>
                 <p class="desc">Маркетинг</p>
               </div>
             </li>
             <li class="portfolio-box">
-              <img class="image"
-                src="./images/portfolio/img-16.jpg"
+              <img
+                class="image"
+                src="./images/portfolio/img-16.jpeg"
                 alt="Людина працюе за ноутбуком"
                 width="370"
                 height="294"
@@ -166,18 +201,29 @@
     <footer class="page-footer">
       <div class="container">
         <div>
-          <a class="link logo-link logo-footer" href="./index.html"><span class="logo">Web</span>Studio</a>
+          <a class="link logo-link logo-footer" href="./index.html"
+            ><span class="logo">Web</span>Studio</a
+          >
           <address>
             <ul class="list">
               <li class="list-item">
-                <a class="connect reach" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank"
-                  rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a>
+                <a
+                  class="connect reach"
+                  href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  >м. Київ, пр-т Лесі Українки, 26</a
+                >
               </li>
               <li class="list-item">
-                <a class="link connect contact-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="link connect contact-address" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
               </li>
               <li class="list-item">
-                <a class="link connect contact-address" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="link connect contact-address" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
               </li>
             </ul>
           </address>
