--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
           <li class="item">
             <a class="link connect" href="mailto:info@devstudio.com">
               <svg class="icon" width="16" height="12">
-                <use href="./images/icons/sprite.svg#envelope"></use></svg
+                <use href="./images/icons.svg#envelope"></use></svg
               >info@devstudio.com
             </a>
           </li>
           <li class="item">
             <a class="link connect" href="tel:+380961111111">
               <svg class="icon" width="10" height="16">
-                <use href="./images/icons/sprite.svg#phone"></use></svg
+                <use href="./images/icons.svg#phone"></use></svg
               >+38 096 111 11 11</a
             >
           </li>
@@ -66,7 +66,7 @@
             <li class="list-merit">
               <div class="thumb">
                 <svg class="thumb-icon" width="70" height="70">
-                  <use href="./images/icons/sprite.svg#antenna"></use>
+                  <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
               <h3 class="section-subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -77,7 +77,7 @@
             <li class="list-merit">
               <div class="thumb">
                 <svg class="thumb-icon" width="70" height="70">
-                  <use href="./images/icons/sprite.svg#clock"></use>
+                  <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
               <h3 class="section-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
@@ -88,7 +88,7 @@
             <li class="list-merit">
               <div class="thumb">
                 <svg class="thumb-icon" width="70" height="70">
-                  <use href="./images/icons/sprite.svg#diagram"></use>
+                  <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
               <h3 class="section-subtitle">ПЛАНУВАННЯ</h3>
@@ -99,7 +99,7 @@
             <li class="list-merit">
               <div class="thumb">
                 <svg class="thumb-icon" width="70" height="70">
-                  <use href="./images/icons/sprite.svg#astronaut"></use>
+                  <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
               <h3 class="section-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
@@ -160,31 +160,31 @@
               <h3 class="section-subtitle">Ігор Дем'яненко</h3>
               <p class="desc-text" lang="en">Product Designer</p>
               <ul class="list social-links">
-                <li class="item">
+                <li class="item social-item">
                   <a class="link social-link" href="#" aria-label="instagram">
                     <svg class="icon">
-                      <use href="./images/icons/sprite.svg#instagram"></use>
+                      <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="item">
+                <li class="item social-item">
                   <a class="link social-link" href="#" aria-label="twitter">
                     <svg class="icon">
-                      <use href="./images/icons/sprite.svg#twitter"></use>
+                      <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="item">
+                <li class="item social-item">
                   <a class="link social-link" href="#" aria-label="facebook">
                     <svg class="icon">
-                      <use href="./images/icons/sprite.svg#facebook"></use>
+                      <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="item">
+                <li class="item social-item">
                   <a class="link social-link" href="#" aria-label="linkedin">
                     <svg class="icon">
-                      <use href="./images/icons/sprite.svg#linkedin"></use>
+                      <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -201,31 +201,31 @@
               <h3 class="section-subtitle">Ольга Рєпіна</h3>
               <p class="desc-text" lang="en">Frontend Developer</p>
               <ul class="list social-links">
-                <li class="item">
+                <li class="item social-item">
                   <a class="link social-link" href="#" aria-label="instagram">
                     <svg class="icon">
-                      <use href="./images/icons/sprite.svg#instagram"></use>
+                      <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="item">
+                <li class="item social-item">
                   <a class="link social-link" href="#" aria-label="twitter">
                     <svg class="icon">
-                      <use href="./images/icons/sprite.svg#twitter"></use>
+                      <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="item">
+                <li class="item social-item">
                   <a class="link social-link" href="#" aria-label="facebook">
                     <svg class="icon">
-                      <use href="./images/icons/sprite.svg#facebook"></use>
+                      <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="item">
+                <li class="item social-item">
                   <a class="link social-link" href="#" aria-label="linkedin">
                     <svg class="icon">
-                      <use href="./images/icons/sprite.svg#linkedin"></use>
+                      <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -242,31 +242,31 @@
               <h3 class="section-subtitle">Микола Тарасов</h3>
               <p class="desc-text" lang="en">Marketing</p>
               <ul class="list social-links">
-                <li class="item">
+                <li class="item social-item">
                   <a class="link social-link" href="#" aria-label="instagram">
                     <svg class="icon">
-                      <use href="./images/icons/sprite.svg#instagram"></use>
+                      <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="item">
+                <li class="item social-item">
                   <a class="link social-link" href="#" aria-label="twitter">
                     <svg class="icon">
-                      <use href="./images/icons/sprite.svg#twitter"></use>
+                      <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="item">
+                <li class="item social-item">
                   <a class="link social-link" href="#" aria-label="facebook">
                     <svg class="icon">
-                      <use href="./images/icons/sprite.svg#facebook"></use>
+                      <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="item">
+                <li class="item social-item">
                   <a class="link social-link" href="#" aria-label="linkedin">
                     <svg class="icon">
-                      <use href="./images/icons/sprite.svg#linkedin"></use>
+                      <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -283,31 +283,31 @@
               <h3 class="section-subtitle">Михайло Єрмаков</h3>
               <p class="desc-text" lang="en">UI Designer</p>
               <ul class="list social-links">
-                <li class="item">
+                <li class="item social-item">
                   <a class="link social-link" href="#" aria-label="instagram">
                     <svg class="icon">
-                      <use href="./images/icons/sprite.svg#instagram"></use>
+                      <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="item">
+                <li class="item social-item">
                   <a class="link social-link" href="#" aria-label="twitter">
                     <svg class="icon">
-                      <use href="./images/icons/sprite.svg#twitter"></use>
+                      <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="item">
+                <li class="item social-item">
                   <a class="link social-link" href="#" aria-label="facebook">
                     <svg class="icon">
-                      <use href="./images/icons/sprite.svg#facebook"></use>
+                      <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li class="item">
+                <li class="item social-item">
                   <a class="link social-link" href="#" aria-label="linkedin">
                     <svg class="icon">
-                      <use href="./images/icons/sprite.svg#linkedin"></use>
+                      <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </a>
                 </li>
@@ -320,45 +320,45 @@
         <div class="container">
           <h2 class="section-title">Постійні клієнти</h2>
           <ul class="list clients">
-            <li>
+            <li class="clients-item">
               <a class="link clients-link" href="#">
                 <svg class="thumb-icon">
-                  <use href="./images/icons/sprite.svg#client-1"></use>
+                  <use href="./images/icons.svg#client-1"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients-item">
               <a class="link clients-link" href="#">
                 <svg class="thumb-icon">
-                  <use href="./images/icons/sprite.svg#client-2"></use>
+                  <use href="./images/icons.svg#client-2"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients-item">
               <a class="link clients-link" href="#">
                 <svg class="thumb-icon">
-                  <use href="./images/icons/sprite.svg#client-3"></use>
+                  <use href="./images/icons.svg#client-3"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients-item">
               <a class="link clients-link" href="#">
                 <svg class="thumb-icon">
-                  <use href="./images/icons/sprite.svg#client-4"></use>
+                  <use href="./images/icons.svg#client-4"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients-item">
               <a class="link clients-link" href="#">
                 <svg class="thumb-icon">
-                  <use href="./images/icons/sprite.svg#client-5"></use>
+                  <use href="./images/icons.svg#client-5"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="clients-item">
               <a class="link clients-link" href="#">
                 <svg class="thumb-icon">
-                  <use href="./images/icons/sprite.svg#client-6"></use>
+                  <use href="./images/icons.svg#client-6"></use>
                 </svg>
               </a>
             </li>
@@ -373,10 +373,10 @@
             ><span class="logo">Web</span>Studio</a
           >
           <address>
-            <ul class="list">
+            <ul class="list address">
               <li class="list-item">
                 <a
-                  class="connect reach"
+                  class="link reach"
                   href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
@@ -399,31 +399,31 @@
         <div class="social-bloc">
           <p class="welcome-text"><strong>приєднуйтесь</strong></p>
           <ul class="list social-links">
-            <li class="item">
+            <li class="item social-item">
               <a class="link social-link welcome-link" href="#" aria-label="instagram">
                 <svg class="icon">
-                  <use href="./images/icons/sprite.svg#instagram"></use>
+                  <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="item">
+            <li class="item social-item">
               <a class="link social-link welcome-link" href="#" aria-label="twitter">
                 <svg class="icon">
-                  <use href="./images/icons/sprite.svg#twitter"></use>
+                  <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="item">
+            <li class="item social-item">
               <a class="link social-link welcome-link" href="#" aria-label="facebook">
                 <svg class="icon">
-                  <use href="./images/icons/sprite.svg#facebook"></use>
+                  <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="item">
+            <li class="item social-item">
               <a class="link social-link welcome-link" href="#" aria-label="linkedin">
                 <svg class="icon">
-                  <use href="./images/icons/sprite.svg#linkedin"></use>
+                  <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
